--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "php": "^8.2",
         "laravel/fortify": "^1.27",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.6",
+        "robsontenorio/mary": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
