--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
-        "robsontenorio/mary": "^2.4"
+        "robsontenorio/mary": "^2.4",
+        "symfony/yaml": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
