--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.1.10",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.22.1"
     }
 }
