--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "mallardduck/blade-lucide-icons": "^1.23",
         "robsontenorio/mary": "^2.4",
         "symfony/yaml": "^7.3"
     },
