--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -4,20 +4,7 @@ services:
     ports:
       - "${WEB_PORT:-80}:80"
     restart: unless-stopped
-    env_file: .env
-  valkey:
-    image: 'valkey/valkey:alpine'
-    ports:
-      - '${FORWARD_VALKEY_PORT:-6379}:6379'
+    environment:
+      - APP_KEY="${APP_KEY}"
     volumes:
-      - 'valkey:/data'
-    healthcheck:
-      test:
-        - CMD
-        - valkey-cli
-        - ping
-      retries: 3
-      timeout: 5s
-volumes:
-  valkey:
-    driver: local
+      - /path/to/ytdl-sub-config:/config
