--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-    "$schema": "https://json.schemastore.org/package.json",
     "private": true,
     "type": "module",
     "scripts": {
         "build": "vite build",
         "dev": "vite"
     },
-    "devDependencies": {
-        "@tailwindcss/vite": "^4.1.10",
-        "axios": "^1.11.0",
-        "concurrently": "^9.0.1",
-        "daisyui": "^5.0.43",
-        "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.1.10",
-        "vite": "^6.2.4"
-    },
     "dependencies": {
-        "sweetalert2": "^11.22.1"
+        "@tailwindcss/vite": "^4.1.11",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.4",
+        "concurrently": "^9.0.1",
+        "laravel-vite-plugin": "^2.0",
+        "tailwindcss": "^4.0.7",
+        "vite": "^7.0.4"
+    },
+    "optionalDependencies": {
+        "@rollup/rollup-linux-x64-gnu": "4.9.5",
+        "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
+        "lightningcss-linux-x64-gnu": "^1.29.1"
     }
 }
